--- a/src/style.css
+++ b/src/style.css
@@ -617,5 +617,22 @@ input, button {
 .goog-te-combo {
     display: none !important;
 }
+.language-switcher {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.language-switcher img {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.language-switcher img:hover {
+  transform: scale(1.2);
+}
 
 
